# DiscordDabstepBot

./: .env  .gitignore  Cargo.toml
src/: events.rs  handler.rs  main.rs  utils.rs
src/commands/: admin.rs  general.rs  mod.rs  music.rs
