[package]
name = "DiscordDubstepBot"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12"
songbird = { version = "0.4", features = ["serenity", "builtin-queue"] }
serenity = { features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"], version = "0.12" }
symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5.2" }
tokio = {version = "1.49.0", features = ["full"]}
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-futures = "0.2.5"
vosk-sys = "0.2.0"
vosk = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
dotenv = "0.15.0"
cpal = "0.17.1"
dasp = "0.11.0"
log = "0.4.29"
